<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClothesActivity">

    <Button
        android:id="@+id/TakePicture_Btn"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginBottom="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_button"
        android:lineSpacingExtra="8sp"
        android:text="@string/add_photoBtn"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="183dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:text="@string/select_colour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TakePicture_Btn" />

    <Spinner
        android:id="@+id/select_color_spinner"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TakePicture_Btn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="183dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/select_category"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/select_category_spinner"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_color_spinner" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="183dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="55dp"
        android:text="@string/select_style"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/select_style"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_category_spinner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="242dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/select_temperature"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/Add_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_button"
        android:textColor="#000000"
        android:textStyle="bold"
        android:text="@string/add_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="115dp"
        android:layout_height="79dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TakePicture_Btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/select_style" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editText" />


</android.support.constraint.ConstraintLayout>